--- a/Corhort107/bootstrap-demo/admin.html
+++ b/Corhort107/bootstrap-demo/admin.html
@@ -61,20 +61,14 @@
         Puthasan Sam (Tig)
     </h5>
     <p class="text-muted text-center">
-        Software Engineer
+        Founder/CEO
     </p>
     <hr>
     <div class="d-flex">
         <div>
-            <p>
-                99K Followers
-            </p>
+            <h3>ADMIN</h3>
         </div>
-        <div>
-            <p>
-                24K Following
-            </p>
-        </div>
+
     </div>
   <hr>
 	<div class="text-center">
@@ -85,12 +79,18 @@
 				<div>
 					<a href="#" class="link-info text-decoration-none text-center">Settings</a>
 				<div>
-					<a href="#" class="link-success text-decoration-none text-center">Donate</a>
+					<a href="#" class="link-info text-decoration-none text-center">Chart</a>
+				</div>
+				<div>
+					<a href="#" class="link-info text-decoration-none text-center">Tables</a>
+				</div>
+				<div>
+					<a href="#" class="link-info text-decoration-none text-center">Tasks</a>
 				</div>
 				</div>
 		<hr>
   		<a href="" class="font-weight-bold text-decoration-none text-center">
-				View My Profile
+				Sources
   		</a>
   	</div>
 </div>
