Finished Admin/User Pages

--- a/Corhort107/bootstrap-demo/admin.html
+++ b/Corhort107/bootstrap-demo/admin.html
@@ -1,174 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Only Friends</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-      integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
-      integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
-      crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#"></a>
-        <img class="rounded-circle shadow-4-strong" alt="OF" src="images/images (1).png" style="width: 55px;" <button
-          class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" />
-        <span class="navbar-toggler-icon"></span>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <div class="mx-auto">
-            <form class="d-flex">
-              <input class="form-control mr-2" type="search" placeholder="Search Here" aria-label="Search"
-                style="min-width: 270%; background-color: rgb(239, 239, 239);">
-            </form>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Only Friends</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"></a>
+      <img class="rounded-circle shadow-4-strong" alt="OF" src="images/images (1).png" style="width: 55px;" <button
+        class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" />
+      <span class="navbar-toggler-icon"></span>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="mx-auto">
+          <form class="d-flex">
+            <input class="form-control mr-2" class="w-100" type="search" placeholder="Search Here" aria-label="Search"
+              style="min-width: 250%; background-color: rgb(239, 239, 239);">
+          </form>
+        </div>
+        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">
+              <i class="far fa-comment"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">
+              <i class="far fa-flag"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <img src="images/images (1).png" alt="logo"
+              style="width: 25px;margin-top: 9px; border-radius: 50px; margin-left: 8px;">
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container jsjhr">
+    <div class="row skfjh">
+      <div class="col-md-2 sfjhe">
+        <div class=" sjfsj">
+          <img class="w-100" style="margin:auto;" src="images/images (1).png" alt="logo">
+          <h5 class="text-center pt-3">
+            Puthasan Sam (Tig)
+          </h5>
+          <p class="text-muted text-center">
+            Founder/CEO
+          </p>
+          <hr>
+          <div class="font-weight-bold text-decoration-none text-center">
+            <div>
+              <p>ADMIN</p>
+            </div>
           </div>
-          <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">
-                <i class="far fa-comment"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">
-                <i class="far fa-flag"></i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <img src="images/images (1).png" alt=""
-                style="width: 25px;margin-top: 9px; border-radius: 50px; margin-left: 8px;">
-            </li>
-          </ul>
+          <hr>
+          <div class="text-center">
+            <a href="#" class="link-primary text-decoration-none text-center">Home</a>
+            <div>
+              <a href="#" class="link-info text-decoration-none text-center">Data</a>
+            </div>
+            <div>
+              <a href="#" class="link-info text-decoration-none text-center">Settings</a>
+              <div>
+                <a href="#" class="link-info text-decoration-none text-center">Chart</a>
+              </div>
+              <div>
+                <a href="#" class="link-info text-decoration-none text-center">Tables</a>
+              </div>
+              <div>
+                <a href="#" class="link-info text-decoration-none text-center">Tasks</a>
+              </div>
+            </div>
+            <hr>
+            <a href="" class="font-weight-bold text-decoration-none text-center">
+              Sources
+            </a>
+          </div>
         </div>
       </div>
-    </nav>
-    <div class="container jsjhr">
-      <div class="row skfjh">
-        <div class="col-md-2 sfjhe">
-          <div class=" sjfsj">
-            <img src="images/images (1).png" alt="">
-            <h5 class="text-center pt-3">
-              Puthasan Sam (Tig)
-            </h5>
-            <p class="text-muted text-center">
-              Founder/CEO
-            </p>
-            <hr>
-            <div class="font-weight-bold text-decoration-none text-center">
-              <div>
-                <p>ADMIN</p>
+      <div class="col-md-6">
+        <div class="jfheuf">
+          <div class="d-flex justify-content-around">
+            <section id="section3">
+              <h2>Developer Status</h2>
+              <div class="percentage-bar">
+                <div class="label">Tasks</div>
+                <div class="bar">
+                  <div class="progress" style="width: 70%;"></div>
+                </div>
               </div>
+
+              <div class="percentage-bar">
+                <div class="label">Web Development</div>
+                <div class="bar">
+                  <div class="progress" style="width: 80%;"></div>
+                </div>
+              </div>
+
+              <div class="percentage-bar">
+                <div class="label">Security</div>
+                <div class="bar">
+                  <div class="progress" style="width: 60%;"></div>
+                </div>
+              </div>
+
+              <div class="percentage-bar">
+                <div class="label">Resources</div>
+                <div class="bar">
+                  <div class="progress" style="width: 90%;"></div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+        <div class="box1">
+          <span>
+            Web Traffic
+          </span>
+          <hr>
+          <img src="images/WebTrafficChart.png" class="w-100" alt="Web Traffic Chart">
+        </div>
+        <div class="box1">
+          <span>
+            Competition
+          </span>
+          <hr>
+          <img src="images/CompetitionSocialMedia.png" class="w-100" alt="Competition Chart">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="left_box">
+          <span>
+            Network
+          </span>
+          <hr>
+          <div class="d-flex dfkj">
+            <div class="lkt40">
+              <img src="images/images (1).png" alt="">
             </div>
-            <hr>
-            <div class="text-center">
-              <a href="#" class="link-primary text-decoration-none text-center">Home</a>
-              <div>
-                <a href="#" class="link-info text-decoration-none text-center">Data</a>
-              </div>
-              <div>
-                <a href="#" class="link-info text-decoration-none text-center">Settings</a>
-                <div>
-                  <a href="#" class="link-info text-decoration-none text-center">Chart</a>
-                </div>
-                <div>
-                  <a href="#" class="link-info text-decoration-none text-center">Tables</a>
-                </div>
-                <div>
-                  <a href="#" class="link-info text-decoration-none text-center">Tasks</a>
-                </div>
-              </div>
-              <hr>
-              <a href="" class="font-weight-bold text-decoration-none text-center">
-                Sources
-              </a>
+            <div>
+              Puthasa Sam(Tig)
+            </div>
+          </div>
+          <hr>
+          <div class="d-flex dfkj">
+            <div class="lkt40">
+              <img src="images/UserLogo.png" alt="">
+            </div>
+            <div>
+              Random Person
+            </div>
+          </div>
+          <hr>
+          <div class="d-flex dfkj">
+            <div class="lkt40">
+              <img src="images/UserLogo.png" alt="">
+            </div>
+            <div>
+              Random Person
+            </div>
+          </div>
+          <hr>
+          <div class="d-flex dfkj">
+            <div class="lkt40">
+              <img src="images/UserLogo.png" alt="">
+            </div>
+            <div>
+              Random Person
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="jfheuf">
-            <div class="d-flex justify-content-around">
-            </div>
-          </div>
-          <div class="box1">
-          </div>
-          <div class="box1">
-          </div>
+        <div class="left_box mt-3">
+          <span>
+            Revenue Sources
+          </span>
+          <hr>
+          <img src="images/PieChartWebTraffic.png" class="w-100" alt="Pie Chart">
         </div>
-        <div class="col-md-4">
-          <div class="left_box">
-            <span>
-              Network
-            </span>
-            <hr>
-            <div class="d-flex dfkj">
-              <div class="lkt40">
-                <img src="images/images (1).png" alt="">
-              </div>
-              <div>
-                Puthasa Sam(Tig)
-              </div>
-            </div>
-            <hr>
-            <div class="d-flex dfkj">
-              <div class="lkt40">
-                <img src="images/UserLogo.png" alt="">
-              </div>
-              <div>
-                Random Person
-              </div>
-            </div>
-            <hr>
-            <div class="d-flex dfkj">
-              <div class="lkt40">
-                <img src="images/UserLogo.png" alt="">
-              </div>
-              <div>
-                Random Person
-              </div>
-            </div>
-            <hr>
-            <div class="d-flex dfkj">
-              <div class="lkt40">
-                <img src="images/UserLogo.png" alt="">
-              </div>
-              <div>
-                Random Person
-              </div>
-            </div>
-          </div>
-          <div class="left_box mt-3">
-            <span>
-              Your Profile Traffic
-            </span>
-            <hr>
-            <img
-              src="https://res.cloudinary.com/yaffa-publishing/image/fetch/v1456442193/http://yaffa-cdn.s3.amazonaws.com/adnews/live/images/dmImage/SourceImage/graph12_CE9EDD90-DC15-11E5-86900204D9902A1F.jpg"
-              class="w-100" alt="">
-          </div>
-          <div class="left_box mt-3">
-            <span class="font-weight-medium">
-              What's New
-            </span>
-            <hr>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut rem nisi natus totam veritatis nam repellat
-              veniam, praesentium quam perspiciatis adipisci reiciendis, at qui aperiam ex sit, officia expedita beatae!
-            </p>
-          </div>
+        <div class="left_box mt-3">
+          <span class="font-weight-medium">
+            What's New on OnlyFriends?
+          </span>
+          <hr>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut rem nisi natus totam veritatis nam repellat
+            veniam, praesentium quam perspiciatis adipisci reiciendis, at qui aperiam ex sit, officia expedita beatae!
+          </p>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 
 </html>
